kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-api-svc
  namespace: todos-api
  labels:
    app: todos
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app: todos
